# midi2osc

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: workflow.yml
src/: config.py  config_file.py  main.py  run.py
