[project]
name = "midi2osc"
version = "0.1.0"
description = "Forward MIDI messages to OSC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "mido>=1.3.3",
    "pydantic>=2.10.6",
    "python-osc>=1.9.3",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[project.scripts]
midi2osc = "main:cli"
